--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,7 @@
             "program": "${workspaceFolder}/qpass-qcast/main.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            // "args": ["--seed=0", "--p_prob=0.5", "--q_prob=0.1", "--num_ts=5"]
-            // "args": ["--seed=0", "--p_prob=1", "--q_prob=1", "--num_ts=10"]
+            "args": ["--single_entanglement_flow_mode"]
         }
     ]
 }
