added a simpler p_prob loss model

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
             "justMyCode": false,
             // "args": ["--single_entanglement_flow_mode"]
             // "args": ["--config_file=${workspaceFolder}/qpass-qcast/sample_config.json"]
+            // "args": ["--qc_loss_model=fixed", "--qc_p_loss_init=1"]
         }
     ]
 }
