--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             // "args": ["--seed=0", "--alg=SLMPg", "--qc_delay_model=gaussian", "--qc_delay_mean=1", "--qc_delay_std=0.5"]
+            // "args": ["--config_file=/home/hun13/netsquid-github/qnet-sim/src/sample_config.json"]
         }
     ]
 }
