--- a/src/sample_config.json
+++ b/src/sample_config.json
@@ -1,6 +1,6 @@
 {
     "seed": 123,
     "single_entanglement_flow_mode": true,
-    "src_set": ["n9"],
+    "--src_set": ["n9"],
     "dst_set": ["n2"]
 }
