--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             // "args": ["--one_sided_epr"]
+            // "args": ["--two_sided_epr"]
         }
     ]
 }
