--- a/src/runfiles/sample_run.yaml
+++ b/src/runfiles/sample_run.yaml
@@ -12,7 +12,7 @@ static:
     one_sided_epr: ~ # for binary flag args, just set the value to null
     num_ts: 11
     traffic_matrix: file
-    tm_file: /home/hun13/qnet-sim/src/sample_tm_file.json # absolute path or path relative to run.py file
+    tm_file: /home/hun13/qnet-sim/src/sample_tm_file.yaml # absolute path or path relative to run.py file
     network: grid_2d
     grid_dim: 19
     qc_loss_model: fixed
