--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,7 @@
             "program": "${workspaceFolder}/src/main.py",
             "console": "integratedTerminal",
             "justMyCode": false,
+            // "args": ["--network=file", "--network_file=/home/hun13/qnet-sim/src/networks-data/grid_2d_19x19_varlen_0.5_1.0.yaml"]
             // "args": ["--one_sided_epr"]
             // "args": ["--two_sided_epr"]
             // "args": ["--num_ts=6", "--traffic_matrix=file", "--tm_file=/home/hun13/qnet-sim/src/sample_tm_file.json", "--grid_dim=10"]
