--- a/tmp-misc-random/degree-exps/64-degree_runfile.yaml
+++ b/tmp-misc-random/degree-exps/64-degree_runfile.yaml
@@ -12,7 +12,9 @@ static:
     one_sided_epr: ~ # for binary flag args, just set the value to null
     num_ts: 11
     traffic_matrix: file
-    tm_file: /home/hun13/qnet-sim/src/sample_tm_file.yaml # absolute path or path relative to run.py file
+    tm_file: /home/hun13/qnet-sim/tmp-misc-random/degree-exps/64-degree-tmfile.yaml
     network: grid_2d
-    grid_dim: 19
+    grid_dim: 28
     qc_loss_model: fixed
+    qc_p_loss_length: 0.2
+    results_dir: /home/hun13/qnet-sim/src/experiments-results/64-degrees
