--- a/src/runfiles/sample_run.yaml
+++ b/src/runfiles/sample_run.yaml
@@ -11,6 +11,7 @@ static:
     alg: SLMPg
     one_sided_epr: ~ # for binary flag args, just set the value to null
     num_ts: 11
+    # traffic_matrix: random
     traffic_matrix: file
     tm_file: /home/hun13/qnet-sim/src/sample_tm_file.yaml # absolute path or path relative to run.py file
     network: grid_2d
