--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-venv-netsquid
-__pycache__
-src/__pycache__
-src/experiments-results/*
-src/runfiles/*
-!src/runfiles/sample_run.yaml
-qnet-venv
+**/__pycache__
+experiments-results/*
